# ZRExcelWorkflow

./: .gitignore  README.md  excel_Lis01.py  main.py  pyproject.toml  requirements.txt  scripts - 快捷方式.lnk  setup.cfg  最终合并目标.xlsx  测试合并.xlsx  表格处理步骤新.xlsx
.trae/rules/: project_rules.md
data/example/: reference.xlsx
data/output/: 原始数据合并phase1sheet1.xlsx  原始数据合并phase1sheet2.xlsx  测试合并.xlsx
scripts/phase1/: process_sheet1_attendance.py  process_sheet2_diagnosis.py  process_sheet3_covid.py  process_sheet4_antiviral.py  process_sheet5_covid_test.py  process_sheet6_population.py  process_sheet7_unique_patients.py
scripts/phase2/: batch_process.py
scripts/phase3/: merge_results.py
tests/: test_phase1.py  test_utils.py
utils/: data_utils.py  excel_utils.py
